--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\" \"App.tsx\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx}\" \"App.tsx\""
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -19,9 +23,14 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-compressor": "^1.16.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-vision-camera": "^4.6.1",
     "tailwindcss": "^3.4.19",
     "zustand": "^5.0.11"
   },
@@ -35,8 +44,12 @@
     "@react-native/typescript-config": "0.74.83",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
     "jest": "^29.6.3",
     "prettier": "3.0.0",
     "react-test-renderer": "18.2.0",
