--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@typescript-eslint/parser": "^8.55.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
-    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.37.5",
     "jest": "^29.6.3",
     "prettier": "3.0.0",
